# racetrack

./: Cargo.toml
assets/shaders/: terrain_shader.wgsl  terrain_vertex_shader.wgsl  texture_shader.wgsl
src/: components.rs  main.rs  systems.rs
src/camera/: components.rs  mod.rs  systems.rs
src/terrain/: components.rs  mod.rs  systems.rs
src/tools/: mod.rs  systems.rs
src/track/: components.rs  mod.rs  systems.rs
src/track_height_map/: components.rs  mod.rs  systems.rs
src/ui/: components.rs  mod.rs  systems.rs
